--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: |
           yarn install
-          yarn build
+          yarn only-build
           tar caf dist.tar.xz dist
         env:
           CI: true
