--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,17 +45,29 @@ jobs:
           asset_path: ./dist.tar.xz
           asset_name: redlens.tar.xz
           asset_content_type: application/x-xz
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Login to Github Packages
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build and Push Image
         uses: docker/build-push-action@v5
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             ghcr.io/cquptmirror/redlens:${{ github.ref_name }}
             ghcr.io/cquptmirror/redlens:${{ contains(github.ref, 'pre') && 'dev' || 'latest' }}
+            cquptmirror/redlens:${{ github.ref_name }}
+            cquptmirror/redlens:${{ contains(github.ref, 'pre') && 'dev' || 'latest' }}
