--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,6 +60,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Log in to Redrock Registry
+        uses: docker/login-action@v3
+        with:
+          registry: reg.redrock.team
+          username: ${{ secrets.REDROCK_USERNAME }}
+          password: ${{ secrets.REDROCK_PASSWORD }}
       - name: Build and Push Image
         uses: docker/build-push-action@v5
         with:
@@ -71,3 +77,5 @@ jobs:
             ghcr.io/cquptmirror/redlens:${{ contains(github.ref, 'pre') && 'dev' || 'latest' }}
             cquptmirror/redlens:${{ github.ref_name }}
             cquptmirror/redlens:${{ contains(github.ref, 'pre') && 'dev' || 'latest' }}
+            reg.redrock.team/mirror/redlens:${{ github.ref_name }}
+            reg.redrock.team/mirror/redlens:${{ contains(github.ref, 'pre') && 'dev' || 'latest' }}
