--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ local.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Editor directories and files
 .idea
@@ -22,3 +23,6 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+
+# pnpm specific files
+.pnpm-store/
