--- a/package.json
+++ b/package.json
@@ -1,47 +1,52 @@
 {
   "name": "template-vue3",
-  "description": "A template of vue3",
+  "type": "module",
   "version": "0.0.0",
+  "description": "A template of vue3",
   "scripts": {
-    "dev": "pnpm vite",
+    "dev": "vite",
     "build": "pnpm vue-tsc --noEmit && pnpm vite build",
     "preview": "pnpm vite preview",
     "lint": "eslint . --cache",
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@unocss/reset": "^0.58.5",
+    "@vueuse/core": "^10.7.2",
     "ant-design-vue": "^4.0.0",
     "axios": "^1.6.7",
     "js-cookie": "^3.0.5",
+    "naive-ui": "^2.40.1",
+    "pinia": "^2.1.7",
     "sass": "^1.71.0",
     "vue": "^3.4.19",
-    "vue-router": "^4.2.5",
-    "pinia": "^2.1.7",
-    "@unocss/reset": "^0.58.5",
-    "@vueuse/core": "^10.7.2"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.8.0",
     "@commitlint/cli": "^18.6.1",
     "@commitlint/config-conventional": "^18.6.2",
+    "@iconify-json/carbon": "^1.2.4",
+    "@iconify-json/ri": "^1.2.3",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
+    "@unocss/preset-attributify": "^0.58.9",
+    "@unocss/preset-icons": "^0.58.9",
+    "@unocss/preset-uno": "^0.58.9",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "eslint": "^9.0.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-vue": "^9.21.1",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "typescript": "^5.3.3",
+    "unocss": "^0.58.9",
     "vite": "^5.1.3",
-    "vue-tsc": "^1.8.27",
-    "unocss": "^0.58.5",
-    "@unocss/preset-uno": "^0.58.5",
-    "@unocss/preset-attributify": "^0.58.5",
-    "@unocss/preset-icons": "^0.58.5"
+    "vue-tsc": "^1.8.27"
   },
   "gitHooks": {
     "pre-commit": "lint-staged",
@@ -52,6 +57,5 @@
       "eslint --fix",
       "prettier --write"
     ]
-  },
-  "type": "module"
+  }
 }
