--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
     "@commitlint/cli": "^18.6.1",
     "@commitlint/config-conventional": "^18.6.2",
     "@iconify-json/carbon": "^1.2.4",
+    "@iconify-json/devicon": "^1.2.5",
+    "@iconify-json/file-icons": "^1.2.0",
+    "@iconify-json/logos": "^1.2.3",
     "@iconify-json/ri": "^1.2.3",
+    "@iconify-json/simple-icons": "^1.2.11",
+    "@iconify/utils": "^2.1.33",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
