feat and fix: 添加pr ci，修复构建命令
Signed-off-by: joshua <i@joshua.su>

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: 18
       - run: |
           yarn install
-          yarn only-build
+          yarn build
           tar caf dist.tar.xz dist
         env:
           CI: true
