--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: 18
       - run: |
           yarn install
-          yarn only-build
+          yarn build
           tar caf dist.tar.xz dist
         env:
           CI: true
