--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -14,12 +14,14 @@ jobs:
       - uses: actions/checkout@v4
 
       # 编译
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
       - run: |
-          npm install -g pnpm
           pnpm install
           pnpm build
           tar caf dist.tar.xz dist
