--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@unocss/reset": "^0.58.5",
-    "@vueuse/core": "^10.7.2",
-    "ant-design-vue": "^4.0.0",
-    "axios": "^1.6.7",
+    "@unocss/reset": "^0.58.9",
+    "@vueuse/core": "^10.11.1",
+    "ant-design-vue": "^4.2.6",
+    "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
     "naive-ui": "^2.40.1",
-    "pinia": "^2.1.7",
-    "sass": "^1.71.0",
-    "vue": "^3.4.19",
-    "vue-router": "^4.2.5"
+    "pinia": "^2.2.6",
+    "sass": "^1.81.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.8.0",
+    "@antfu/eslint-config": "^2.27.3",
     "@commitlint/cli": "^18.6.1",
-    "@commitlint/config-conventional": "^18.6.2",
+    "@commitlint/config-conventional": "^18.6.3",
+    "@iconify-json/arcticons": "^1.2.4",
     "@iconify-json/carbon": "^1.2.4",
     "@iconify-json/devicon": "^1.2.5",
     "@iconify-json/file-icons": "^1.2.0",
@@ -34,23 +35,23 @@
     "@iconify-json/simple-icons": "^1.2.11",
     "@iconify/utils": "^2.1.33",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20.11.24",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
+    "@types/node": "^20.17.6",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "@unocss/preset-attributify": "^0.58.9",
     "@unocss/preset-icons": "^0.58.9",
     "@unocss/preset-uno": "^0.58.9",
-    "@vitejs/plugin-vue": "^5.0.4",
+    "@vitejs/plugin-vue": "^5.2.0",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-vue": "^9.21.1",
-    "lint-staged": "^15.2.2",
-    "prettier": "^3.2.5",
-    "typescript": "^5.3.3",
+    "eslint-plugin-vue": "^9.31.0",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.3",
     "unocss": "^0.58.9",
-    "vite": "^5.1.3",
+    "vite": "^5.4.11",
     "vue-tsc": "^1.8.27"
   },
   "gitHooks": {
